// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      主要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      主要按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-danger t-button--variant-base"
    >
      主要按钮
    </button>
    <button
      class="t-button t-button--theme-danger t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-danger t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-danger t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
</DocumentFragment>
`;

exports[`block.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="display: flex; flex-direction: column; width: 50%; margin: auto;"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-base t-size-full-width"
      >
        主按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-size-full-width"
      >
        次要按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-size-full-width"
      >
        虚框按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
      >
        文字按钮
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ghost.jsx 1`] = `
<DocumentFragment>
  <div
    style="background: rgb(221, 221, 221); padding: 24px;"
  >
    <div
      class="tdesign-demo-block"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-base t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-button--ghost"
      >
        幽灵按钮
      </button>
    </div>
    <div
      class="tdesign-demo-block"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-outline t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-dashed t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-text t-button--ghost"
      >
        幽灵按钮
      </button>
    </div>
    <div
      class="tdesign-demo-block"
    >
      <button
        class="t-button t-button--theme-danger t-button--variant-base t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-outline t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-dashed t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-text t-button--ghost"
      >
        幽灵按钮
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="button-wrap"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      确定
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      取消
    </button>
  </div>
  <div
    class="button-wrap"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      下一步
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      上一步
    </button>
  </div>
  <div
    class="button-wrap"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      新建主机
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      重装系统
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      批量续费
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-button--icon-only"
    >
      <svg
        class="t-icon t-icon-more"
      >
        <use
          xlink:href="#t-icon-more"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    <svg
      class="t-icon t-icon-search"
    >
      <use
        xlink:href="#t-icon-search"
      />
    </svg>
    <span
      class="t-button__text"
    >
      line
    </span>
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-outline"
  >
    <svg
      class="t-icon t-icon-search"
    >
      <use
        xlink:href="#t-icon-search"
      />
    </svg>
    <span
      class="t-button__text"
    >
      primary
    </span>
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base t-button--icon-only"
  >
    <svg
      class="t-icon t-icon-search"
    >
      <use
        xlink:href="#t-icon-search"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base t-button--shape-round"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base t-button--shape-circle"
    >
      i
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-button--shape-round"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-button--shape-circle"
    >
      i
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-button--shape-round"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-button--shape-circle"
    >
      i
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
    >
      文字按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-button--shape-round"
    >
      文字按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-button--shape-circle"
    >
      i
    </button>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base t-size-s"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-size-s"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-size-s"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-size-s"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base t-size-l"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-size-l"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-size-l"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-size-l"
    >
      文字按钮
    </button>
  </div>
</DocumentFragment>
`;
